--- a/static/style.css
+++ b/static/style.css
@@ -37,7 +37,7 @@ body {
 .container {
     max-width: 1280px;
     margin: 32px auto;
-    padding: 24px;
+    padding: 20px 60px;
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
